--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,13 +2,12 @@
 main:
   #- title: "Quick-Start Guide"
   #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  - title: "Blog Post"
+  - title: "Blog"
     url: /blog/
-  - title: "How To ..."
-    url: /howto/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+  
