update author metadata

--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "ardiantovn"
   avatar           : "/images/profile.png"
-  bio              : "a story and code writer"
+  bio              : "a stargazer"
   location         : 
   email            :
   
