--- a/_config.yml
+++ b/_config.yml
@@ -123,6 +123,9 @@ author:
     - label: "ardiantovn"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/ardiantovn"
+    - label: "VSCO Gallery"
+      icon: "fas fa-fw fa-camera"
+      url: "https://vsco.co/ardiantovn/gallery"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
