feat: korean cv

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@ main:
     url: /about/
   - title: "CV"
     url: /cv/
+  - title: "이려서"
+    url: /korcv/
   - title: "Blog"
     url: /blog/
   # - title: "Sample Posts"
