--- a/_config.yml
+++ b/_config.yml
@@ -117,10 +117,19 @@ author:
       # url: "https://your-website.com"
     - label: "ardiantovn"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/ardiantovn"
+      # url: "https://twitter.com/ardiantovn"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://linkedin.com/in/vendianugroho"
+    - label: "Medium"
+      icon: "/assets/icon/Medium-Icon-Black.svg"
+      url: "https://medium.com/@ardiantovn"
+    - label: "Substack"
+      icon: "fas fa-fw fa-newspaper"
+      url: "https://ardiantovn.substack.com"
     - label: "ardiantovn"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/ardiantovn"
