--- a/_config.yml
+++ b/_config.yml
@@ -115,8 +115,8 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
-    - label: "ardiantovn"
-      icon: "fab fa-fw fa-twitter-square"
+    # - label: "ardiantovn"
+    #   icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/ardiantovn"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
@@ -125,12 +125,12 @@ author:
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/vendianugroho"
     - label: "Medium"
-      icon: "/assets/icon/Medium-Icon-Black.svg"
+      icon: "fab fa-fw fa-medium"
       url: "https://medium.com/@ardiantovn"
     - label: "Substack"
       icon: "fas fa-fw fa-newspaper"
       url: "https://ardiantovn.substack.com"
-    - label: "ardiantovn"
+    - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/ardiantovn"
     - label: "VSCO Gallery"
@@ -143,8 +143,8 @@ author:
 # Site Footer
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
+    # - label: "Twitter"
+    #   icon: "fab fa-fw fa-twitter-square"
       # url:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
