chore: edit icon

--- a/_config.yml
+++ b/_config.yml
@@ -124,6 +124,9 @@ author:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/vendianugroho"
+    - label: "Upwork"
+      icon: "fas fa-fw fa-briefcase"
+      url: "https://www.upwork.com/freelancers/vendiardiantonugroho"
     - label: "Medium"
       icon: "fab fa-fw fa-medium"
       url: "https://medium.com/@ardiantovn"
